# tt-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  codespell.yml  npm-stage.yml  release.yml  rust-ci.yml
docs/: releasing.md
npm/tt-cli/: README.md  package.json
scripts/: build_npm_package.py  create_github_release.py  homebrew_print_checksums.py  install_native_deps.py  stage_npm_packages.py
src/: app.rs  client.rs  config.rs  interaction.rs  lib.rs  loader.rs  main.rs  models.rs  ui.rs  version.rs
src/commands/: chat.rs  config.rs  mod.rs  model.rs  setup.rs
tests/: cli_smoke.rs  config_tests.rs  loader_tests.rs  models_tests.rs
tests/common/: mod.rs
