[package]
name = "tt"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "6.0"
dialoguer = "0.12"
futures = "0.3"
tokio-stream = "0.1"
crossterm = "0.29"
termimad = "0.32"
